@@ -613,13 +613,11 @@ __objc_print_dtable_stats()
 
   objc_mutex_lock(__objc_runtime_mutex);
 
-  printf("memory usage: (%s)\n",
 #ifdef OBJC_SPARSE2
-	 "2-level sparse arrays"
+  printf("memory usage: (%s)\n", "2-level sparse arrays");
 #else
-	 "3-level sparse arrays"
+  printf("memory usage: (%s)\n", "3-level sparse arrays");
 #endif
-	 );
 
   printf("arrays: %d = %ld bytes\n", narrays, 
 	 (long)narrays*sizeof(struct sarray));
